[project]
name = "rpa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "drissionpage>=4.1.1.2",
    "html5lib>=1.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pyperclip>=1.11.0",
    "questionary>=2.0.1",
    "rich>=13.7.0",
]
